consolidated all tests
use default visibility, normalized JavaDoc, clean code