@@ -27,7 +27,7 @@ import com.devonfw.tools.ide.version.GenericVersionRange;
 /**
  * Test of {@link IdeToolCommandlet} using {@link IdeToolDummyCommandlet}.
  */
-public class IdeToolDummyCommandletTest extends AbstractIdeContextTest {
+class IdeToolDummyCommandletTest extends AbstractIdeContextTest {
 
   /**
    * Run the dummy commandlet and test that only active plugins are passed to installPlugin method.
@@ -35,7 +35,7 @@ public class IdeToolDummyCommandletTest extends AbstractIdeContextTest {
    * @param tempDir the {@link TempDir}.
    */
   @Test
-  public void testDummyCommandlet(@TempDir Path tempDir) {
+  void testDummyCommandlet(@TempDir Path tempDir) {
 
     AbstractIdeTestContext context = new IdeSlf4jContext();
     context.setPluginsPath(tempDir);
@@ -49,7 +49,7 @@ public class IdeToolDummyCommandletTest extends AbstractIdeContextTest {
     assertThat(dummy).isSameAs(dummyCommandlet);
     dummy.run();
     assertThat(dummyCommandlet.installedPlugins).hasSize(1);
-    ToolPluginDescriptor plugin = dummyCommandlet.installedPlugins.get(0);
+    ToolPluginDescriptor plugin = dummyCommandlet.installedPlugins.getFirst();
     assertThat(plugin.id()).isEqualTo("plugin1-id");
     assertThat(plugin.url()).isEqualTo("https://dummy.com/plugins/plugin1-url");
   }
@@ -77,7 +77,6 @@ public class IdeToolDummyCommandletTest extends AbstractIdeContextTest {
     public ProcessResult runTool(ProcessMode processMode, GenericVersionRange toolVersion, ProcessErrorHandling errorHandling, List<String> args) {
 
       // skip installation but trigger postInstall to test mocked plugin installation
-      ProcessContext pc = this.context.newProcess().errorHandling(ProcessErrorHandling.THROW_CLI);
       postInstall(new ToolInstallRequest(true));
       return new ProcessResultImpl(this.tool, this.tool, 0, List.of());
     }
